--- a/backend/supply-chain-demo/src/main/resources/application.properties
+++ b/backend/supply-chain-demo/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=supply-chain-demo
 server.port=8080
 
 # 数据库配置
-#spring.datasource.username=root
-#spring.datasource.password=root1234
-#spring.datasource.url=jdbc:mysql://47.100.78.90:13306/supplychain
+#spring.datasource.username=
+#spring.datasource.password=
+#spring.datasource.url=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.datasource.username=root
@@ -51,16 +51,16 @@ spring.jackson.time-zone=GMT+8
 
 
 # webase-front 2.2导入私钥接口
-webase.front.import.user.url=http://130.252.200.206:5002/WeBASE-Front/privateKey/import
+webase.front.import.user.url=http://xx/WeBASE-Front/privateKey/import
 # webase-front 1.3合约部署接口
-webase-front.contract.deploy.url=http://130.252.200.206:5002/WeBASE-Front/contract/deploy
+webase-front.contract.deploy.url=http://xx/WeBASE-Front/contract/deploy
 # webase-front 5.2交易处理接口（本地签名）
-webase-front.trans.handle.url=http://130.252.200.206:5002/WeBASE-Front/trans/handle
+webase-front.trans.handle.url=http://xx/WeBASE-Front/trans/handle
 
 # erc20 合约初始化用户地址
-erc20.supply.user.address=0xfba32dd62ffc2082bb3398fadeee2b9dd679c340
+erc20.supply.user.address=
 # erc20 合约部署地址
-erc20.contract.address=0x9a8074820adb42d174d1f349961410a0c790f40a
+erc20.contract.address=
 # erc20 合约名称
 erc20.contract.name=erc20
 
